# xkcdesktop

./: .gitmodules  README.md  meson.build
data/: com.github.tvale.xkcdesktop.appdata.xml  com.github.tvale.xkcdesktop.desktop  com.github.tvale.xkcdesktop.gschema.xml
debian/: changelog  control  copyright
src/: Application.vala  Backend.vala  Image.vala  MainWindow.vala  NavigationButtons.vala  Overlay.vala  SearchEntry.vala  ZoomMode.vala
vapi/: libxkcd.vapi
